syntax = "proto3";

message FileUUID {
  string QQ = 1;
  bytes md5 = 2;
  uint64 size = 3;
  uint64 appid = 4;
  uint64 time = 5;
  uint64 unknown_field = 10;
}

message FileInfo {
  message Message1 {
    M12 field2 = 2;
    // 以下是3结构
    message Message11 {
      string field2 = 2;
      int32 field7 = 7;
      int32 field10 = 10;
      bytes field13 = 13;
      int32 field20 = 20;
      int32 field22 = 22;
      int32 field23 = 23;
      int32 field25 = 25;
      int32 field26 = 26;
      // 85-264
      message Message12 {
        int32 field1 = 1;
        oneof field9 { // ?string|?bytes
          string str = 2;
          bytes bytes = 3;
        }
        string path = 30; // 带rkey的path
      }
      Message12 field34 = 34;
    }
    Message11 field3 = 3;
  }
  Message1 field1 = 1;
  int32 field2 = 2;
}

message M12 {
  message M121 {
    message M1211 {
      message M12111 {
        int32 field1 = 1;
        string md5 = 2;
        string sha1 = 3;
        string name = 4;
        message Message1215 {
          int32 field1 = 1;
          int32 field2 = 2;
        }
        Message1215 field5 = 5;
        int32 width = 6;
        int32 height = 7;
        int32 field9 = 9;
      }
      M12111 field1 = 1;
      string file_id = 2;
      int32 field3 = 3;
      int32 field4 = 4;
      int32 field5 = 5;
      int32 field7 = 7;
    }
    M1211 field1 = 1;
    message M1212 {
      string path = 1; // 没有rkey
      message Spec {
        string spec1 = 1;
        string spec2 = 2;
        string spec3 = 3;
      }
      Spec spec = 2;
      string host = 3;
    }
    M1212 field2 = 2;
    int32 field5 = 5;
    // 6-7
    message M1267 {
      int32 field102 = 102;
      int32 field200 = 200;
      message Group {
        int32 group_id = 1;
      }
      Group group = 202;
    }
    M1267 field6 = 6;
  }
  M121 field1 = 1;
  // 122
  message M122 {
    // 1221
    message M1221 {
      int32 field1001 = 1001;
      int32 field1002 = 1002;
      int32 field1003 = 1003;
    }
    M1221 field1 = 1;
    int32 field10 = 10;
  }
  M122 field2 = 2;
}

// const obj = {
//   1: {
//     2: {
//       1: {
//         1: {
//           1: {
//             1: 'varint',
//             2: 'string', // md5
//             3: 'string', // sha1
//             4: 'string', // name
//             5: {
//               1: 'varint',
//               2: 'varint'
//             },
//             6: 'varint',
//             7: 'varint',
//             9: 'varint'
//           },
//           2: 'string', // file_id
//           3: 'varint',
//           4: 'varint',
//           5: 'varint',
//           7: 'varint'
//         },
//         2: {
//           1: 'string', // path 没有rkey
//           2: { // spec
//             1: 'string',
//             2: 'string',
//             3: 'string'
//           },
//           3: 'string' // host
//         },
//         5: 'varint',
//         6: {
//           102: 'varint',
//           200: 'varint',
//           202: {
//             1: 'varint'
//           }
//         }
//       },
//       2: {
//         1: {
//           1001: 'varint',
//           1002: 'varint',
//           1003: 'varint'
//         },
//         10: 'varint'
//       }
//     },
//     3: {
//       2: 'string',
//       7: 'varint',
//       10: 'varint',
//       13: 'bytes',
//       20: 'varint',
//       22: 'varint',
//       23: 'varint',
//       25: 'varint',
//       26: 'varint',
//       34: {
//         1: 'varint',
//         9: '?string|?bytes',
//         30: 'string' // 带rkey的path
//       }
//     }
//   },
//   2: 'varint'
// }